# web-library

./: .cnb.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: sync-cnb.yml
docs/: agentic-rag-function-calling-design.md  agentic-rag-optimization-roadmap.md  ai-assisted-retrieval-review-guide.md  ai-candidate-scoring-implementation.md  data-mapping.md  multi-source-retrieval-design.md  retrieval-deployment.md  semantic-search.md  多源异构检索功能实现说明.md
skills/agentic-rag/: SKILL.md
src/zotero_web_library/: __init__.py  app_store.py  metadata_import.py  paths.py  search_service.py  semantic_tags.py  sources.py  structured_text.py  sync.py  utils.py  web.py  zotero_adapter.py
src/zotero_web_library/rag/: embeddings.py  ingest.py  query.py  store.py
src/zotero_web_library/rag/agent/: evidence.py  memory.py  tools.py
src/zotero_web_library/retrieval/: __init__.py  importing.py  merge.py  models.py  providers.py  rehearsal.py
src/zotero_web_library/static/: app.css  app.js  knowledge.js  reader.css  reader.js  writing.css
src/zotero_web_library/templates/: api_config.html  features.html  index.html  knowledge.html  library.html  reader.html  writing.html
tests/: conftest.py  test_codex_agent.py  test_frontend_contract.py  test_metadata_import.py  test_rag.py  test_rag_agent.py  test_rag_phase1.py  test_retrieval.py  test_semantic_tags.py  test_sources.py  test_structured_text.py  test_zotero_adapter.py
tests/fixtures/retrieval_sources/: ai4s_exports.jsonl  ai4s_registry.csv
